fix topics and regions
