# docs/swagger.json
@@ -3483,11 +3483,11 @@
                 "name": {
                     "type": "string"
                 },
-                "region_id": {
-                    "type": "integer"
+                "region": {
+                    "type": "string"
                 },
-                "topic_id": {
-                    "type": "integer"
+                "topic": {
+                    "type": "string"
                 }
             }
         },
@@ -3734,8 +3734,8 @@
                 "age_to",
                 "gender",
                 "name",
-                "region_id",
-                "topic_id"
+                "region",
+                "topic"
             ],
             "properties": {
                 "age_from": {
@@ -3747,19 +3747,19 @@
                 "gender": {
                     "type": "string",
                     "enum": [
-                        "male",
-                        "female",
+                        "man",
+                        "woman",
                         "any"
                     ]
                 },
                 "name": {
                     "type": "string"
                 },
-                "region_id": {
-                    "type": "integer"
+                "region": {
+                    "type": "string"
                 },
-                "topic_id": {
-                    "type": "integer"
+                "topic": {
+                    "type": "string"
                 }
             }
         },
@@ -4562,8 +4562,8 @@
                     "type": "string",
                     "minLength": 1,
                     "enum": [
-                        "male",
-                        "female",
+                        "man",
+                        "woman",
                         "any"
                     ]
                 },
@@ -4571,13 +4571,13 @@
                     "type": "string",
                     "minLength": 1
                 },
-                "region_id": {
-                    "type": "integer",
-                    "minimum": 1
+                "region": {
+                    "type": "string",
+                    "minLength": 1
                 },
-                "topic_id": {
-                    "type": "integer",
-                    "minimum": 1
+                "topic": {
+                    "type": "string",
+                    "minLength": 1
                 }
             }
         },
